styling adjustments to avoid phantom scrollbars

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -2,10 +2,9 @@
 
 nav {
     display: flex;
-    flex-basis: 95vw;
     flex-grow: 1;
     font-family: "Roboto", sans-serif;
-    min-width: calc(100vw - 36px);
+    min-width: calc(100% - 36px);
 
 
     a {
