--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -23,7 +23,6 @@ header {
     display: flex;
     height: 5vh;
     min-height: 2em;
-    width: 100vw;
 
     ul {
         list-style: none;
